No need to double connect things. activated() signal is enough. This was getting two times into the slotOK() method, which was returning more than the expected values.

BUG: 173137

svn path=/trunk/KDE/kdelibs/; revision=874314